2013-01-13  Jim Fowler  <jrf@Biblion>

	* Tools/src/symbol.py: Began writing the symbol table code.
	Adapted the character_picker code from Rich Griswold's package.
	Switched to branch insert_symbol

	* Tools/src/headerWindow.py (main): Learned how to make dialog
	windows expand with the help of Walter Moriera in Austin.
	Converted the headerWindow.py file to us a designer gui
	rather than the handcrafted one.  All seems to work well.

2013-01-05  Jim Fowler  <jrf@Biblion>

	* Tools/src/headerWindow.py (main): Converted headerWindow()
	to a QDialog and give up for the time being on making it
	expandable. Tested with BookEntry and it appears to work.

2013-01-03  Jim Fowler  <jrf@Biblion>

	* Tools/src/headerWindow.py (headerWindow): created headerWindow
	class and gui that will expand with the window. Added some actions
	and worked out how to link with the main BookEntry class.

2013-01-01  Jim Fowler  <jrf@Biblion>

	* Tools/src/BookEntry.py (BookEntry): Restored BookEntry.py
	version from prior to 28 Dec.  Got it working with the bookfile
	class. Also got all the Gui text boxes to update. I can now
	display all but Translator, Compilers, Contributors, and Language.

	* Tools/src/AJBentry.py (AJBentry.write): finished the write()
	method. Corrected one problem in parseComments for 'reprint of'.
	Wasn't getting the year, only the AJBnum.

2012-12-31  Jim Fowler  <jrf@Biblion>

	* Tools/src/AJBentry.py (AJBentry.write): added function
	to write out the string version of an AJB entry.

	* Tools/src/bookfile.py (BookFile): added BookFile class to
	interface between disk entries and entry lists.

2012-12-30  Jim Fowler  <jrf@Biblion>

	* Tools/src/AJBentry.py (AJBentry): split the AJBentry class
	out of entry.py. Wrote isValid() function as well as isValidAjbNum().
	Converted extract() to read().  Converted parse*() functions to
	private functions.

	* Tools/src/entry.py (Entry): added write() and isValid()
	definitions for sub-classes. Changed extract() to read().
